# c-aws

./: CMakeLists.txt  README.md  aws.c  aws.h  build.sh  run.sh
include/: aws.h
src/: aws.c  main.c
